tests/baselines/reference/objectLiteralMemberWithoutBlock1.errors.txt
objectLiteralMemberWithoutBlock1.ts(1,16): error TS1005: '{' expected.


==== objectLiteralMemberWithoutBlock1.ts (1 errors) ====
    var v = { foo(); }
                   ~
!!! error TS1005: '{' expected.